--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node dist/index.js",
+    "build": "tsc",
+    "dev": "tsx src/index.ts"
   },
   "dependencies": {
     "@chainsafe/libp2p-noise": "^16.1.3",
@@ -16,5 +18,10 @@
     "it-pipe": "^3.0.1",
     "libp2p": "^2.8.6",
     "multiaddr": "^10.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^22.15.21",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   }
 }
